<resources>
    <string name="app_name">Projet_Android</string>
    <string name="lblbutton">Button</string>
    <string name="lblimage">lblimage</string>
    <string name="lbltaille">Taille :</string>
    <string name="lbltogray_1">TO_GRAY_1</string>
    <string name="lbl_to_gray_2">TO_GRAY_2</string>
    <string name="lbltext">Hello and welcome</string>
    <string name="lbl_text_Hi">TextView</string>
    <string name="lbl_size">TextView</string>
    <string name="lbl_next_tp"><![CDATA[Next TP -->]]></string>
    <string name="lbl_colorize">Colorize</string>
    <string name="lbl_canned_color_1">Canned_Color_1</string>

    <string name="lbl_decreases_contrast">decreases contrast</string>
    <string name="lbl_colorize_2">Colorize_2</string>
    <string name="lbl_decreases_contrast_lut">decreases contrast LUT</string>
    <string name="lbl_increases_contrast">increases contrast</string>
    <string name="lbl_increases_contrast_lut">increases contrast lut</string>
    <string name="lbl_next_tp2"><![CDATA[Next TP -->]]></string>

    <string name="reset_item">Reset </string>
    <string name="next_item">Next </string>
    <string name="to_gray_item">To Gray</string>
    <string name="to_grays_item">To Grays</string>

    <string name="colorized_item">Colorized</string>
    <string name="colorize_item">Colorize</string>
    <string name="canned_color_item">Canned Color</string>

    <string name="increases_contrast_item">Increases Contrast</string>
    <string name="increases_contrast_lut_item">Increases Contrast (LUT)</string>
    <string name="decreases_contrast_lut_item">Decreases Contrast (LUT)</string>
    <string name="up_contrast_lut_item">Up Contrast (LUT)</string>
    <string name="down_contrast_lut_item">Down Contrast (LUT)</string>


</resources>
