<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_reset"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/reset_item" />

    <item android:id="@+id/menu_next"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/next_item" />

    <item android:id="@+id/menu_to_gray1"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/to_gray_item" />

    <item android:id="@+id/menu_to_gray2"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/to_grays_item" />

</menu>