<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_reset"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/reset_item" />

    <item android:id="@+id/menu_next"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/next_item" />

    <item android:id="@+id/menu_colorized"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/colorize_item" />

    <item android:id="@+id/menu_colorize"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/colorize_item" />

    <item android:id="@+id/menu_canned_color"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/canned_color_item" />
</menu>